--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-******    SpgInit    ******
+******    SpgGen    ******
 
 In order to compile, one simply needs cmake and a c++11 compiler.
 
@@ -7,7 +7,7 @@ For ubuntu, you may install cmake by entering "sudo apt-get install cmake"
 
 Compilation instructions:
 
-Enter the following into a terminal from the root spgInit directory
+Enter the following into a terminal from the root spgGen directory
 
   mkdir build; cd build; cmake ..; make -j3
 
@@ -15,7 +15,7 @@ The program should be compiled!
 
 To run the program, use the executable that is created in the build directory
 as follows:
-  ./spgInit <inputFileName>
+  ./spgGen <inputFileName>
 
 A sample input file with instructions is included in the root
-directory: spgInit.in
+directory: spgGen.in
